--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 									<h1>I'm Aman Yadav</h1>
 									
 									<p>
-										Robotics Devloper
+										Robotics Developer
 						
 									</p>
 									<p>Myself Aman Yadav and I have graduated in B.tech CSE and there was a specific reason why I enrolled for computer science well it simply began from my interest.</p>
